--- a/mlr_pos_cryptopayments/views/pos_payment.xml
+++ b/mlr_pos_cryptopayments/views/pos_payment.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0"?>
 <odoo>
     <data>
-        <record id="view_pos_payment_form_cryotopay" model="ir.ui.view">
+        <record id="view_pos_payment_form_cryptopay" model="ir.ui.view">
             <field name="name">pos.payment.form.view.inherit</field>
             <field name="model">pos.payment</field>
-            <field name="inherit_id" ref="point_of_sale.view_pos_payment_form"></field>
+            <field name="inherit_id" ref="point_of_sale.view_pos_payment_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='session_id']" position="after">
                     <field name="is_crypto_payment"/>
                     <field name="cryptopay_payment_type" attrs="{'invisible': [('is_crypto_payment', '!=', True)]}"/>
-                    <field name="cryptopay_invoice_id" attrs="{'invisible': [('is_crypto_payment', '!=', True)]}"/>
+                    <field name="cryptopay_invoice_id" attrs="{'invisible': [('is_crypto_payment', '!=', True)]}" style="width: 200px"/>
                     <field name="conversion_rate" attrs="{'invisible': [('is_crypto_payment', '!=', True)]}"/>
                     <field name="invoiced_crypto_amount" attrs="{'invisible': [('is_crypto_payment', '!=', True)]}"/>
-                    <field name="cryptopay_payment_link" attrs="{'invisible': [('is_crypto_payment', '!=', True)]}"/>
+                    <field name="cryptopay_payment_link" attrs="{'invisible': [('is_crypto_payment', '!=', True)]}" style="width: 200px"/>
+                    <field name="currency_id" attrs="{'invisible': [('is_crypto_payment', '!=', True)]}"/>
                 </xpath>
             </field>
         </record>
