--- a/mlr_pos_cryptopayments/views/pos_payment_method.xml
+++ b/mlr_pos_cryptopayments/views/pos_payment_method.xml
@@ -7,6 +7,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='use_payment_terminal']" position="after">
                 <group name="crypto_payment"/>
+                    <field name="use_payment_terminal"/>
             </xpath>
         </field>
     </record>
